--- a/cssCode.css
+++ b/cssCode.css
@@ -1,12 +1,43 @@
 p1 {
     color: orange;
     font-size: 40px;
-    font-family: Parchment;
+    font-family: 'Bell MT';
 }
-h1 {
-    border-bottom: 1px solid black;
-    font-size: 50px;
-    text-align: center;
+header {
+  background-image: url(ohno.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+}
+
+ul {
+    float: left;
+    list-style-type: none;
+    font-family: Arial;
+}
+
+ul li {
+    display: inline-block;
+}
+
+ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 5px 20px;
+    border: 1px solid black;
+    transition: 0.5s ease;
+}
+
+ul li a:hover {
+    background-color: white;
+    color: black;
+}
+
+.title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
 }
 
 
